paused this branch

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-recorded_audio/
-recorded_videos/
-transcriptions/
-transcription/
-temp_audio_segments/
-clusters/
-
 .vscode/
 _pycache_/
 pytest_cache/
+
+recorded_audio/
+recorded_videos/
+processed_audio/
+transcriptions/
+
+temp_audio_segments/
+
+transcription/
+clusters/
+OLD/
